@@ -14,10 +14,10 @@ repositories {
 
 dependencies {
     // https://mvnrepository.com/artifact/org.openjfx/javafx-fxml
-    compile group: 'org.openjfx', name: 'javafx-fxml', version: '11.0.2'
-    compile group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
-    compile group: 'com.jfoenix', name: 'jfoenix', version: '9.0.10'
-    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
+    implementation group: 'org.openjfx', name: 'javafx-fxml', version: '11.0.2'
+    implementation group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
+    implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.10'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
     implementation group: 'org.openjfx', name: 'javafx-fxml', version: '11.0.2'
     implementation "org.hibernate:hibernate-core:5.4.24.Final"
     //compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.1'
@@ -28,9 +28,10 @@ dependencies {
 application{
     applicationDefaultJvmArgs =  [
             // necessary for ControlsFX
-            "--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED",
-            ]
+            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+            //"--add-modules=javafx.controls, javafx.fxml",
 
+            ]
 }
 
 javafx {
@@ -38,6 +39,7 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml']
 
 }
+
 sourceSets.main {
     java {
         srcDir 'src/main/java' //assume that your source codes are inside this path
@@ -52,7 +54,9 @@ sourceSets.main {
 mainClassName = 'gui.ProjectMethods'
 
 run {
+
     standardInput = System.in
+
 }
 
 
